[package]
name = "remote64-client"
version = "0.1.0"
edition = "2021"

[dependencies]
remote64-common = { path = "../common" }
websocket = { version = "0.26", default-features = false, features = ["sync", "sync-ssl"] }

log = "0.4"
env_logger = "0.9"
clap = { version = "3.1", features = ["cargo", "env"] }
zstd = "*"

minifb = "0.20"
portaudio = "0.7"
crossbeam-queue = "0.3"