[package]
name = "remote64-server"
version = "0.1.0"
edition = "2021"

[dependencies]
remote64-common = { path = "../common" }
websocket = { version = "0.26", default-features = false, features = ["sync", "sync-ssl"] }

log = "0.4"
env_logger = "0.9"
clap = { version = "3.1", features = ["cargo", "env"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
zstd = "*"

minifb = "0.20"
v4l = { version = "0.12", features = ["v4l2"] }
portaudio = "0.7"
image = "0.24"
hound = "3.4"